--- a/covid19.html
+++ b/covid19.html
@@ -57,9 +57,9 @@
     </div>
 </div>
 <div class="sky-bg">
-    <div class="container text-center">
+    <div class="text-center">
         <a href="index.html" style="display: inline-block; padding-top: 5vh">
-            <img src="images/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
+            <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
         </a>
     </div>
 
@@ -68,8 +68,7 @@
             <h1 style="font-size: 5vw"> COVID-19 </h1>
             <h2> vhHacks update on the current situation </h2>
         </div>
-
-        <p class="py-5 px-5" style="text-align: left; font-size: large">
+        <p class="py-5 px-5" style="text-align: left; font-size: 20px">
             As you’ve no doubt been following, it’s become increasingly clear over the last week that we must all do our
             part to help slow the COVID-19 pandemic in our communities. Authorities have been advising cancellation of
             large gatherings, and after a difficult discussion with the team, we’ve made the difficult decision tonight
@@ -81,14 +80,35 @@
             Sincerely,<br><br>
             The vhHacks Team.
             <br>
-            <img src="" style="width: 50px">
         </p>
+
+        <div class=" px-5 text-left" style="border-radius: 10px; border: white 2px solid;">
+            <div class="row py-5 px-5 v-center">
+                <div class="col px-5">
+                    <img src="images/warning.svg" style="width: 4vw">
+                </div>
+                <div class="col px-5">
+                    For more information on COVID-19:<br>
+                    - <a
+                        href="https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection.html">The
+                    Government of Canada</a><br>
+                    - <a
+                        href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">
+                    BC Centre for Disease Control</a><br>
+                    -<a href="https://docs.google.com/presentation/u/3/d/1uG8g8AW4PEevKSESfnXUaKgH-bi8O-4PVOHBcdPMp9A/edit">
+                    Coronavirus: Myth vs Reality</a> by Xavier Helgesen, Founder of Enduring Ventures
+
+                </div>
+            </div>
+        </div>
     </div>
+    <img src="images/website-decor/diver.svg" class="diver px-5 absolute" style="left: 4vw">
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
-        <img src="images/angler.svg" id="beluga">
+        <img src="images/website-decor/angler.svg" id="angler">
         <div class="full-height footer-txt">
-            <div class="container">
+            <div class="container text-center">
+                <img src="images/logos/vhhacksclear.png" style="width: 200px">
             </div>
         </div>
     </footer>
@@ -109,8 +129,8 @@
 <!--Main-active-JS-->
 <script src="js/main.js"></script>
 <script src="js/navbarscroll.js"></script>
-<!--<script src="js/particles.js"></script>-->
-<!--<script src="js/app.js"></script>-->
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
 <!--<script src="js/daynight.js"></script>-->
 </body>
 
