Make covid statement more mobile friendly

--- a/covid19.html
+++ b/covid19.html
@@ -62,7 +62,7 @@
             <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
         </a>
     </div>
-
+    <img src="images/website-decor/diver.svg" class="diver px-5 absolute mobile-unfriendly" style="left: 4vw;">
     <div class="container px-5 py-5 text-center">
         <div class="py-5">
             <h1 style="font-size: 5vw"> COVID-19 </h1>
@@ -84,10 +84,10 @@
 
         <div class=" px-5 text-left" style="border-radius: 10px; border: white 2px solid;">
             <div class="row py-5 px-5 v-center">
-                <div class="col px-5">
-                    <img src="images/warning.svg" style="width: 4vw">
+                <div class="col px-5 mobile-unfriendly">
+                    <img src="images/warning.svg" style="width: 50%">
                 </div>
-                <div class="col px-5">
+                <div class="col px-1">
                     For more information on COVID-19:<br>
                     - <a
                         href="https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection.html">The
@@ -102,10 +102,9 @@
             </div>
         </div>
     </div>
-    <img src="images/website-decor/diver.svg" class="diver px-5 absolute" style="left: 4vw">
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
-        <img src="images/website-decor/angler.svg" id="angler">
+        <img src="images/website-decor/angler.svg" class="mobile-unfriendly" id="angler">
         <div class="full-height footer-txt">
             <div class="container text-center">
                 <img src="images/logos/vhhacksclear.png" style="width: 200px">
