--- a/covid19.html
+++ b/covid19.html
@@ -29,7 +29,8 @@
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Plugin-CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/themify-icons.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -84,10 +85,25 @@
 
         <div class=" px-5 text-left" style="border-radius: 10px; border: white 2px solid;">
             <div class="row py-5 px-5 v-center">
-                <div class="col px-5 mobile-unfriendly">
+                <div class="col px-1 mobile-unfriendly">
+                    <img src="images/list.svg" style="width: 50%">
+                </div>
+                <div class="col-lg-9 px-1" style="width: 80%">
+                    <h1>Registrants</h1>
+                    For those who have already registered for vhHacks 2020, if and when we run the event, you will not
+                    have to re-register, and we will send you an email to confirm your attendance.
+
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class=" px-5 text-left" style="border-radius: 10px; border: white 2px solid;">
+            <div class="row py-5 px-5 v-center">
+                <div class="col px-1 mobile-unfriendly">
                     <img src="images/warning.svg" style="width: 50%">
                 </div>
-                <div class="col px-1">
+                <div class="col-lg-9 px-1" style="width: 80%">
+                    <h1>Suggested Reading</h1>
                     For more information on COVID-19:<br>
                     - <a
                         href="https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection.html">The
@@ -101,6 +117,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
@@ -116,8 +133,13 @@
 
 
 <!--Vendor-JS-->
-<script src="js/vendor/jquery-1.12.4.min.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+        crossorigin="anonymous"></script>
 <!--Plugin-JS-->
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/contact-form.js"></script>
