Add new website

--- a/covid19.html
+++ b/covid19.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Andy Zhao">
     <meta name="description" content="">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,19 +10,6 @@
     <!-- Title -->
     <title>vhHacks 2020</title>
     <!-- Place favicon.ico in the icon directory -->
-    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="manifest" href="icon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
@@ -57,13 +43,13 @@
         <div class="sk-cube3 sk-cube"></div>
     </div>
 </div>
-<div class="sky-bg">
+<div style="background: linear-gradient(to bottom, #1582BD, black);">
     <div class="text-center">
         <a href="index.html" style="display: inline-block; padding-top: 5vh">
             <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
         </a>
     </div>
-    <img src="images/website-decor/diver.svg" class="diver px-5 absolute mobile-unfriendly" style="left: 4vw;">
+    <img src="images/website-decor/diver.svg" class="diver px-5 mobile-unfriendly" style="left: 4vw; position: absolute">
     <div class="container px-5 py-5 text-center">
         <div class="py-5">
             <h1 style="font-size: 5vw"> COVID-19 </h1>
@@ -120,7 +106,7 @@
 
     </div>
     <footer class="footer-area relative" id="contact-page">
-        <div class="absolute footer-bg"></div>
+        <img src="images/website-decor/Sea_Floor.svg" style="position: absolute">
         <img src="images/website-decor/angler.svg" class="mobile-unfriendly" id="angler">
         <div class="full-height footer-txt">
             <div class="container text-center">
